# jungle_gym_cpp

./: CMakeLists.txt  README.md
data/: a3c_diagram.drawio
data/benchmark/final/: actor.pt  critic.pt
data/benchmark/initial/: actor.pt  critic.pt
docs/: a3c_benchmark.md
inc/: A2CAgent.hpp  A3CAgent.hpp  AsyncIterator.hpp  Environment.hpp  Episode.hpp  Hyperparameters.hpp  IterativeStats.hpp  LRScheduler.hpp  PGAgent.hpp  PPOAgent.hpp  Policy.hpp  RMSPropAsync.hpp  ReplayBuffer.hpp  SnakeEnv.hpp  mimalloc_conditional_override.hpp  misc.hpp
src/: Environment.cpp  Episode.cpp  IterativeStats.cpp  Policy.cpp  ReplayBuffer.cpp  SnakeEnv.cpp  misc.cpp
src/executable/: a.cpp  demo_snake.cpp  train_snake.cpp
src/test/: b.cpp  benchmark_a3c.cpp  test_adam_rel.cpp  test_async_iterator.cpp  test_chunking.cpp  test_contention.cpp  test_episode.cpp  test_iterative_stats.cpp  test_lr_scheduler.cpp  test_sdl2.cpp  test_snake_env.cpp
